--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -32,4 +32,4 @@ jobs:
         run: cmake --build build -j4
 
       - name: run
-        run: ./build/Filestorm
+        run: ./build/Filestorm -h
