--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: install_dependencies
         run: |
-          dnf install -y cmake gcc-c++ make cxxopts-devel spdlog-devel
+          dnf install -y cmake gcc-c++ make cxxopts-devel spdlog-devel git
           
       - name: configure
         run: cmake -S . -Bbuild -DCMAKE_BUILD_TYPE=Debug
