--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -18,16 +18,18 @@ jobs:
     runs-on: ubuntu-latest
     container: fedora:latest
     steps:
+      - name: install_dependencies
+        run: |
+          dnf install -y cmake gcc-c++ make cxxopts-devel spdlog-devel git
+
       - uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
           path: "**/cpm_modules"
           key: ${{ github.workflow }}-cpm-modules-${{ hashFiles('**/CMakeLists.txt', '**/*.cmake') }}
-
-      - name: install_dependencies
-        run: |
-          dnf install -y cmake gcc-c++ make cxxopts-devel spdlog-devel git
-          ls -la
+      
+      - name: debug
+        run: ls -la
           
       - name: configure
         run: cmake -S . -Bbuild -DCMAKE_BUILD_TYPE=Debug
