--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -23,6 +23,9 @@ jobs:
           dnf install -y cmake gcc-c++ make cxxopts-devel spdlog-devel git
 
       - uses: actions/checkout@v4
+        with:
+          fetch-tags: "true"
+
       - uses: actions/cache@v3
         with:
           path: "**/cpm_modules"
