--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -32,7 +32,9 @@ jobs:
           key: ${{ github.workflow }}-cpm-modules-${{ hashFiles('**/CMakeLists.txt', '**/*.cmake') }}
       
       - name: debug
-        run: git config --global --add safe.directory /__w/Filestorm/Filestorm
+        run: | 
+          git config --global --add safe.directory /__w/Filestorm/Filestorm
+          git tag
 
           
       - name: configure
