--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-tags: "true"
+          fetch-depth: 0
 
       - uses: actions/cache@v3
         with:
