--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -23,7 +23,7 @@ jobs:
       - name: install_dependencies
         run: |
           apt update
-          apt install -y cmake gcc-c++ make cxxopts-devel spdlog-devel git
+          apt install -y cmake g++ make libcxxopts-dev libspdlog-dev libfmt-dev git
 
       - uses: actions/checkout@v4
         with:
