--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -34,6 +34,10 @@ jobs:
           path: "**/cpm_modules"
           key: ${{ github.workflow }}-cpm-modules-${{ hashFiles('**/CMakeLists.txt', '**/*.cmake') }}
 
+      - name: git safe
+        run: | 
+          git config --global --add safe.directory /__w/Filestorm/Filestorm
+            
       - name: build and install library
         run: |
           cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
