--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,9 +1,12 @@
 srpm:
-    dnf -y install cmake gcc-c++ make cxxopts-devel spdlog-devel git
+	dnf -y install cmake gcc-c++ make cxxopts-devel spdlog-devel git
 	mkdir  build
-	cd build && cmake .. && make
-	cpack -G SRPM
-	rpmfiles=`ls *.rpm`
+	cd build && cmake .. && make && cpack -G RPM 
+	rpmfiles=`ls build/filestorm*.rpm`
+	if [ -z "$$rpmfiles" ]; then \
+		echo "No RPM files found"; \
+		exit 1; \
+	fi
 	for rpmfile in $$rpmfiles; do \
 		echo $$rpmfile; \
 		cp $$rpmfile $(outdir); \
