Fix filestorm RPM file path in Makefile

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -2,7 +2,7 @@ srpm:
 	dnf -y install cmake gcc-c++ make cxxopts-devel spdlog-devel git
 	mkdir  build
 	cd build && cmake .. && make && cpack -G RPM 
-	rpmfiles=`ls build/filestorm*.rpm`
+	rpmfiles=`ls filestorm*.rpm`
 	echo $$rpmfiles
 	if [ -z "$$rpmfiles" ]; then \
 		echo "No RPM files found"; \
