--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -3,6 +3,7 @@ srpm:
 	mkdir  build
 	cd build && cmake .. && make && cpack -G RPM 
 	rpmfiles=`ls filestorm*.rpm`
+	echo `ls`
 	echo $$rpmfiles
 	if [ -z "$$rpmfiles" ]; then \
 		echo "No RPM files found"; \
