Update Makefile to correctly reference the build directory for RPM files

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -3,7 +3,7 @@ srpm:
 	mkdir  build
 	cd build && cmake .. && make && cpack -G RPM 
 	echo `ls`
-	rpmfiles=`ls filestorm*.rpm`
+	rpmfiles=`ls build/filestorm*.rpm`
 	echo $$rpmfiles
 	for rpmfile in $$rpmfiles; do \
 		echo $$rpmfile; \
