Refactor Makefile to generate SRPM instead of RPM

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,7 +1,8 @@
 srpm:
 	dnf -y install cmake gcc-c++ make cxxopts-devel spdlog-devel git
 	mkdir  build
-	cd build && cmake .. && make && cpack -G RPM 
+	cd build && cmake .. && make
+	cpack -G SRPM 
 	echo `ls`
 	rpmfiles=`ls build/filestorm*.rpm`
 	echo $$rpmfiles
