Update Makefile to generate SRPM instead of RPM

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -2,8 +2,7 @@ srpm:
 	dnf -y install cmake gcc-c++ make cxxopts-devel spdlog-devel git
 	mkdir  build
 	cd build && cmake .. && make
-	cpack -G RPM 
-	echo `ls`
+	cpack -G SRPM --config ./CPackSourceConfig.cmake
 	rpmfiles=`ls build/filestorm*.rpm`
 	echo $$rpmfiles
 	for rpmfile in $$rpmfiles; do \
