--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -2,7 +2,7 @@ srpm:
 	dnf -y install cmake gcc-c++ make cxxopts-devel spdlog-devel git
 	mkdir  build
 	cd build && cmake .. && make
-	cpack -G RPM --config ./CPackSourceConfig.cmake
+	cpack -G RPM --config build/CPackSourceConfig.cmake
 	rpmfiles=`ls build/filestorm*.rpm`
 	echo $$rpmfiles
 	for rpmfile in $$rpmfiles; do \
