getversion support settin version from .version file

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,7 +1,8 @@
 srpm:
 	dnf -y install cmake gcc-c++ make cxxopts-devel spdlog-devel git
 	mkdir -p build
-	cd build && cmake .. && make
+	cd build && cmake ..
+	cp build/.version .version
 	cpack -G RPM --config build/CPackSourceConfig.cmake
 	echo `ls`
 	for rpmfile in `ls filestorm-*.src.rpm`; do \
