--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -2,7 +2,7 @@ srpm:
 	dnf -y install cmake gcc-c++ make cxxopts-devel spdlog-devel git
 	mkdir -p build
 	cd build && cmake ..
-	cp build/.version .version
+	cp .version build/.version
 	cpack -G RPM --config build/CPackSourceConfig.cmake
 	echo `ls`
 	for rpmfile in `ls filestorm-*.src.rpm`; do \
