copr makefile fix

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,11 +1,11 @@
 srpm:
 	dnf -y install cmake gcc-c++ make cxxopts-devel spdlog-devel git
 	mkdir -p build
-	cd build && cmake ..
-	ls -l build
-	ls -l
-	pwd
-	cp .version build/.version
+	make
+	cp build/.version .version
+	make clean
+	mkdir -p build
+	cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
 	cpack -G RPM --config build/CPackSourceConfig.cmake
 	echo `ls`
 	for rpmfile in `ls filestorm-*.src.rpm`; do \
