--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: install_dependencies
         run: |
-          dnf install -y cmake gcc-c++ make cxxopts-devel spdlog-devel git
+          dnf install -y cmake gcc-c++ make spdlog-devel git
 
       - uses: actions/checkout@v4
         with:
