Fix data type in ReadAction and WriteAction

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,6 +18,9 @@ include(../cmake/CPM.cmake)
 CPMAddPackage("gh:doctest/doctest@2.4.9")
 CPMAddPackage("gh:TheLartians/Format.cmake@1.7.3")
 
+find_package(fmt REQUIRED)
+find_package(spdlog REQUIRED)
+
 if(TEST_INSTALLED_VERSION)
   find_package(filestorm REQUIRED)
 else()
@@ -28,7 +31,7 @@ endif()
 
 file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 add_executable(${PROJECT_NAME} ${sources})
-target_link_libraries(${PROJECT_NAME} doctest::doctest filestorm::filestorm)
+target_link_libraries(${PROJECT_NAME} doctest::doctest filestorm::filestorm fmt::fmt spdlog::spdlog)
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 
 # enable compiler warnings
