Update CMakeLists.txt and tests_filetree.cpp

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,15 +18,14 @@ include(../cmake/CPM.cmake)
 CPMAddPackage("gh:doctest/doctest@2.4.9")
 CPMAddPackage("gh:TheLartians/Format.cmake@1.7.3")
 CPMAddPackage(
-    NAME nlohmann_json
-    GITHUB_REPOSITORY nlohmann/json
-    VERSION 3.9.1
-    OPTIONS "JSON_BuildTests OFF"
-    )
+  NAME nlohmann_json
+  GITHUB_REPOSITORY nlohmann/json
+  VERSION 3.9.1
+  OPTIONS "JSON_BuildTests OFF"
+)
 
 find_package(fmt REQUIRED)
 find_package(spdlog REQUIRED)
-
 
 if(TEST_INSTALLED_VERSION)
   find_package(filestorm REQUIRED)
@@ -38,13 +37,16 @@ endif()
 
 file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 add_executable(${PROJECT_NAME} ${sources})
-target_link_libraries(${PROJECT_NAME} doctest::doctest filestorm::filestorm fmt::fmt spdlog::spdlog nlohmann_json::nlohmann_json)
+target_link_libraries(
+  ${PROJECT_NAME} doctest::doctest filestorm::filestorm fmt::fmt spdlog::spdlog
+  nlohmann_json::nlohmann_json
+)
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 
 # enable compiler warnings
 if(NOT TEST_INSTALLED_VERSION)
   if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-    target_compile_options(filestorm PUBLIC -Wall -Wpedantic -Wextra -Werror)
+    target_compile_options(filestorm PUBLIC -Wall -Wpedantic -Wextra) # -Werror
   elseif(MSVC)
     target_compile_options(filestorm PUBLIC /W4 /WX)
     target_compile_definitions(${PROJECT_NAME} PUBLIC DOCTEST_CONFIG_USE_STD_HEADERS)
