cxxopts removal and adding via cpmadd
cxxopts linking

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,11 @@ CPMAddPackage(
   VERSION 3.9.1
   OPTIONS "JSON_BuildTests OFF"
 )
+CPMAddPackage(
+  GITHUB_REPOSITORY jarro2783/cxxopts
+  VERSION 2.2.1
+  OPTIONS "CXXOPTS_BUILD_EXAMPLES NO" "CXXOPTS_BUILD_TESTS NO" "CXXOPTS_ENABLE_INSTALL YES"
+)
 
 find_package(fmt REQUIRED)
 find_package(spdlog REQUIRED)
@@ -38,8 +43,13 @@ endif()
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 add_executable(${PROJECT_NAME} ${sources})
 target_link_libraries(
-  ${PROJECT_NAME} doctest::doctest filestorm::filestorm fmt::fmt spdlog::spdlog
+  ${PROJECT_NAME}
+  doctest::doctest
+  filestorm::filestorm
+  fmt::fmt
+  spdlog::spdlog
   nlohmann_json::nlohmann_json
+  cxxopts::cxxopts
 )
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 
