json lib shared

--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: install_dependencies
         run: |
-          dnf install -y cmake gcc-c++ make spdlog-devel git cxxopts-devel
+          dnf install -y cmake gcc-c++ make spdlog-devel git cxxopts-devel json-devel
 
       - uses: actions/checkout@v4
         with:
@@ -52,7 +52,7 @@ jobs:
     steps:
       - name: install_dependencies
         run: |
-          dnf install -y cmake gcc-c++ make spdlog-devel git cxxopts-devel
+          dnf install -y cmake gcc-c++ make spdlog-devel git cxxopts-devel json-devel
 
       - uses: actions/checkout@v4
         with:
