--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Install dependencies
-        run: brew install spdlog fmt cxxopts
+        run: brew install spdlog fmt cxxopts nlohmann-json
         
       - uses: actions/checkout@v4
         with:
