--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -22,8 +22,8 @@ jobs:
     steps:
       - name: install_dependencies
         run: |
-          sudo apt update
-          sudo apt install -y cmake g++ make libspdlog-dev libfmt-dev git libcxxopts-dev nlohmann-json3-dev
+          apt update
+          apt install -y cmake g++ make libspdlog-dev libfmt-dev git libcxxopts-dev nlohmann-json3-dev
 
       - uses: actions/checkout@v4
         with:
