--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -22,8 +22,8 @@ jobs:
     steps:
       - name: install_dependencies
         run: |
-          apt update
-          apt install -y cmake g++ make libspdlog-dev libfmt-dev git libcxxopts-dev nlohmann-json3-dev
+          sudo apt update
+          sudo apt install -y cmake g++ make libspdlog-dev libfmt-dev git libcxxopts-dev nlohmann-json3-dev
 
       - uses: actions/checkout@v4
         with:
@@ -35,7 +35,9 @@ jobs:
           key: ${{ github.workflow }}-cpm-modules-${{ hashFiles('**/CMakeLists.txt', '**/*.cmake') }}
 
       - name: configure
-        run: cmake -Stest -Bbuild -DENABLE_TEST_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug
+        run: |
+          g++ --version
+          cmake -Stest -Bbuild -DENABLE_TEST_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug
 
       - name: build
         run: cmake --build build -j4
