--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,19 +27,16 @@ include(cmake/CPM.cmake)
 
 # PackageProject.cmake will be used to make our target installable
 CPMAddPackage("gh:TheLartians/PackageProject.cmake@1.11.1")
-# CPMAddPackage( NAME nlohmann_json GITHUB_REPOSITORY nlohmann/json VERSION 3.9.1 OPTIONS
-# "JSON_BuildTests OFF" )
 
-# Ensure static linking by setting CMAKE_FIND_LIBRARY_SUFFIXES
-set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
-
-# Prefer static libraries over shared ones
+# ---- Set to prefer static libraries ----
 set(BUILD_SHARED_LIBS OFF)
+set(CMAKE_FIND_LIBRARY_SUFFIXES ".a" ".lib")
 
-find_package(fmt REQUIRED)
-find_package(spdlog REQUIRED)
-find_package(cxxopts REQUIRED)
-find_package(nlohmann_json REQUIRED)
+# ---- Find static dependencies ----
+find_package(fmt REQUIRED CONFIG)
+find_package(spdlog REQUIRED CONFIG)
+find_package(cxxopts REQUIRED CONFIG)
+find_package(nlohmann_json REQUIRED CONFIG)
 
 # ---- Add source files ----
 
@@ -49,8 +46,6 @@ file(GLOB_RECURSE headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp")
 
 # ---- Create library ----
-# add_library(filestorm ${headers} ${sources}) Note: for header-only libraries change all PUBLIC
-# flags to INTERFACE and create an interface target: add_library(${PROJECT_NAME} INTERFACE)
 add_library(${PROJECT_NAME} STATIC ${headers} ${sources})
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 
