--- a/specific-makefiles/build-in-libs/Makefile
+++ b/specific-makefiles/build-in-libs/Makefile
@@ -5,7 +5,7 @@
 all: build
 	
 srpm:
-	cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DUSE_CPM=1
-	cd build; cpack -G RPM --config CPackSourceConfig.cmake
+	cd ../..; cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DUSE_CPM=1
+	cd ../../build; cpack -G RPM --config CPackSourceConfig.cmake
 
 .PHONY: all srpm
